--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
@@ -19,52 +19,47 @@
 
     <EditText
         android:id="@+id/etUserName"
-        android:layout_width="300dp"
+        android:layout_width="351dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="0dp"
         android:ems="10"
-        android:hint="User Name:"
         android:inputType="textPersonName"
-        android:text=""
-        android:layout_marginLeft="55dp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        app:layout_constraintTop_toBottomOf="@+id/username_text"
-        android:layout_marginStart="55dp" />" />
+        app:layout_constraintTop_toBottomOf="@+id/username_text" />
 
     <EditText
         android:id="@+id/etEmail"
-        android:layout_width="300dp"
+        android:layout_width="351dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="-9dp"
         android:ems="10"
-        android:hint="Email:"
         android:inputType="textEmailAddress"
-        android:layout_marginLeft="55dp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        app:layout_constraintTop_toBottomOf="@+id/email_text"
-        android:layout_marginStart="55dp" />
+        app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="300dp"
+        android:layout_width="351dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="0dp"
         android:ems="10"
-        android:hint="Password:"
         android:inputType="textPassword"
-        android:layout_marginLeft="55dp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        app:layout_constraintTop_toBottomOf="@+id/password_text"
-        android:layout_marginStart="55dp" />
+        app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
     <EditText
         android:id="@+id/etPassword2"
-        android:layout_width="300dp"
+        android:layout_width="351dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="-2dp"
         android:ems="10"
-        android:hint="Confirm password:"
         android:inputType="textPassword"
-        android:layout_marginLeft="55dp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_text"
-        android:layout_marginStart="55dp" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_text" />
 
     <Button
         android:id="@+id/bSignUp"
@@ -74,80 +69,70 @@
         android:textSize="20sp"
         android:background="#5cb85c"
         android:textColor="#f7f7f9"
-        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="6dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.503" />
 
     <EditText
         android:id="@+id/etFirstName"
-        android:layout_width="300dp"
+        android:layout_width="189dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="0dp"
         android:ems="10"
-        android:hint="First Name:"
         android:inputType="textPersonName"
-        android:layout_marginLeft="55dp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        app:layout_constraintTop_toBottomOf="@+id/firstname_text"
-        android:layout_marginStart="55dp" />
+        app:layout_constraintTop_toBottomOf="@+id/firstname_text" />
 
     <EditText
         android:id="@+id/etTown"
-        android:layout_width="300dp"
+        android:layout_width="189dp"
         android:layout_height="40dp"
-        android:ems="10"
-        android:hint="Town:"
-        android:inputType="textPersonName"
-        android:layout_marginLeft="55dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="-3dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
         app:layout_constraintTop_toBottomOf="@+id/Town_text" />
 
     <EditText
         android:id="@+id/etLastName"
-        android:layout_width="300dp"
+        android:layout_width="155dp"
         android:layout_height="40dp"
         android:ems="10"
-        android:hint="Last Name"
         android:inputType="textPersonName"
-        android:layout_marginLeft="55dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        android:layout_marginTop="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/lastname_text"
-        android:layout_marginStart="55dp" />
+        app:layout_constraintLeft_toRightOf="@+id/etFirstName"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="-32dp"
+        app:layout_constraintTop_toBottomOf="@+id/lastname_text" />
 
     <TextView
         android:id="@+id/tvSignup"
-        android:layout_width="129dp"
-        android:layout_height="52dp"
+        android:layout_width="169dp"
+        android:layout_height="73dp"
         android:fontFamily="sans-serif"
         android:text="Signup"
         android:textColor="@android:color/white"
-        android:textSize="35sp"
+        android:textSize="50sp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp" />
 
     <EditText
         android:id="@+id/etNumber"
-        android:layout_width="300dp"
+        android:layout_width="155dp"
         android:layout_height="40dp"
         android:ems="10"
-        android:hint="Number:"
         android:inputType="textPersonName"
-        android:layout_marginLeft="55dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        android:layout_marginTop="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/number_text"
-        android:layout_marginStart="55dp" />
+        app:layout_constraintLeft_toRightOf="@+id/etTown"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/number_text" />
 
     <TextView
         android:id="@+id/username_text"
@@ -155,12 +140,11 @@
         android:layout_height="wrap_content"
         android:text="Username:"
         android:textColor="#f7f7f9"
-        android:textSize="18sp"
-        android:layout_marginLeft="55dp"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        android:layout_marginTop="2dp"
-        app:layout_constraintTop_toBottomOf="@+id/etLastName"
-        android:layout_marginStart="55dp" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />
 
     <TextView
         android:id="@+id/password_text"
@@ -168,12 +152,11 @@
         android:layout_height="wrap_content"
         android:text="Password:"
         android:textColor="#f7f7f9"
-        android:textSize="18sp"
-        android:layout_marginLeft="55dp"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/etEmail"
-        android:layout_marginStart="55dp" />
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/firstname_text"
@@ -181,11 +164,11 @@
         android:layout_height="wrap_content"
         android:text="First Name:"
         android:textColor="#f7f7f9"
-        android:textSize="18sp"
-        android:layout_marginLeft="55dp"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
         app:layout_constraintTop_toBottomOf="@+id/tvSignup"
-        android:layout_marginStart="55dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/lastname_text"
@@ -193,11 +176,11 @@
         android:layout_height="wrap_content"
         android:text="Last Name:"
         android:textColor="#f7f7f9"
-        android:textSize="18sp"
-        android:layout_marginLeft="55dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
-        android:layout_marginStart="55dp" />
+        android:textSize="24sp"
+        app:layout_constraintLeft_toRightOf="@+id/firstname_text"
+        android:layout_marginLeft="66dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvSignup" />
 
     <TextView
         android:id="@+id/email_text"
@@ -205,12 +188,11 @@
         android:layout_height="wrap_content"
         android:text="Email:"
         android:textColor="#f7f7f9"
-        android:textSize="18sp"
-        android:layout_marginLeft="55dp"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        android:layout_marginTop="3dp"
-        app:layout_constraintTop_toBottomOf="@+id/etNumber"
-        android:layout_marginStart="55dp" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/etUserName" />
 
     <TextView
         android:id="@+id/number_text"
@@ -218,11 +200,11 @@
         android:layout_height="wrap_content"
         android:text="Number:"
         android:textColor="#f7f7f9"
-        android:textSize="18sp"
-        android:layout_marginLeft="55dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        app:layout_constraintTop_toBottomOf="@+id/etUserName"
-        android:layout_marginStart="55dp" />
+        android:textSize="24sp"
+        android:layout_marginTop="-12dp"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword2"
+        app:layout_constraintLeft_toRightOf="@+id/Town_text"
+        android:layout_marginLeft="148dp" />
 
     <TextView
         android:id="@+id/confirmpassword_text"
@@ -230,11 +212,11 @@
         android:layout_height="wrap_content"
         android:text="Confirm Password:"
         android:textColor="#f7f7f9"
-        android:textSize="18sp"
-        android:layout_marginLeft="55dp"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
         app:layout_constraintTop_toBottomOf="@+id/etPassword"
-        android:layout_marginStart="55dp" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="0dp" />
 
     <TextView
         android:id="@+id/Town_text"
@@ -242,10 +224,10 @@
         android:layout_height="wrap_content"
         android:text="Town:"
         android:textColor="#f7f7f9"
-        android:textSize="18sp"
-        android:layout_marginLeft="55dp"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/Back_button"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword2" />
+        app:layout_constraintTop_toBottomOf="@+id/etPassword2"
+        android:layout_marginLeft="16dp" />
 
 </android.support.constraint.ConstraintLayout>
