--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_search_.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_search_.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
-        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteX="0dp"
         android:textColor="#f7f7f9"
         android:background="@null"
         tools:layout_editor_absoluteY="2dp" />
@@ -20,14 +20,15 @@
     <Button
         android:id="@+id/bSearch_Search"
         android:layout_width="232dp"
-        android:layout_height="44dp"
+        android:layout_height="48dp"
         android:text="Search"
         android:background="#4a90e2"
         android:textColor="#f7f7f9"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-        android:layout_marginLeft="76dp"
-        app:layout_constraintLeft_toLeftOf="@+id/bBack_Search" />
+        app:layout_constraintTop_toBottomOf="@+id/edSearch"
+        android:layout_marginLeft="75dp"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Search"
+        android:layout_marginStart="75dp" />
 
     <TextView
         android:id="@+id/textView6"
@@ -40,20 +41,22 @@
         android:layout_marginLeft="49dp"
         app:layout_constraintLeft_toLeftOf="@+id/bBack_Search"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="65dp" />
+        android:layout_marginTop="65dp"
+        android:layout_marginStart="49dp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/edSearch"
         android:layout_width="335dp"
         android:layout_height="45dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="I want to visit..."
+        android:hint="I want to visit..."
         android:textColor="#b6bdc6"
         android:background="#f7f7f9"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
-        android:layout_marginLeft="33dp"
-        app:layout_constraintLeft_toLeftOf="@+id/bBack_Search" />
+        android:layout_marginLeft="38dp"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Search"
+        android:layout_marginStart="32dp" />
 
 </android.support.constraint.ConstraintLayout>
