--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_welcome.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_welcome.xml
@@ -78,7 +78,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/Main_Text_3"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:onClick="findPlace"/>
 
     <Button
         android:id="@+id/Travelbook_Button"
@@ -97,5 +98,15 @@
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.242" />
+
+    <TextView
+        android:id="@+id/searched_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginLeft="176dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="57dp"
+        app:layout_constraintTop_toBottomOf="@+id/Travelbook_Button" />
 
 </android.support.constraint.ConstraintLayout>
