--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_trip.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_trip.xml
@@ -50,10 +50,15 @@
         android:background="#4a90e2"
         android:textColor="#f7f7f9"
         android:layout_marginStart="85dp"
-        app:layout_constraintLeft_toLeftOf="@+id/bBack_Trip"
-        android:layout_marginTop="0dp"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/Trip_text"
-        android:layout_marginLeft="85dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/tripresults_listview"
+        app:layout_constraintHorizontal_bias="0.31" />
 
     <ListView
         android:id="@+id/tripresults_listview"
