--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_welcome.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_welcome.xml
@@ -77,9 +77,30 @@
         android:layout_marginBottom="82dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/Main_Text_3"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.25"
         android:onClick="findPlace"/>
+
+    <Button
+        android:id="@+id/bAllTravelBooks"
+        android:layout_width="0dp"
+        android:layout_height="66dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="13dp"
+        android:background="#4a90e2"
+        android:onClick="findPlace"
+        android:text="View All TravelBooks"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Travelbook_Button"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/Travelbook_Button"
@@ -93,11 +114,10 @@
         android:layout_marginStart="33dp"
         android:layout_marginEnd="33dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="13dp"
         app:layout_constraintTop_toBottomOf="@+id/Main_Text_3"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.242" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/searched_address"
