--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_search__destination_.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_search__destination_.xml
@@ -14,12 +14,46 @@
         android:layout_height="match_parent"
         />
 
+
+    <ImageButton
+        android:id="@+id/attractions"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        android:background="@drawable/attractions2"
+        android:layout_marginLeft="28dp"
+        android:layout_marginBottom="26dp"
+        android:layout_marginStart="17dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:id="@+id/restaurants"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        android:background="@drawable/restaurant2"
+        android:layout_marginLeft="156dp"
+
+        android:layout_alignTop="@+id/attractions"
+        android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:id="@+id/accomodation"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        android:background="@drawable/accommodation"
+        android:layout_marginLeft="282dp"
+        android:layout_marginStart="17dp"
+        android:layout_alignTop="@+id/restaurants"
+        android:layout_toEndOf="@+id/restaurants" />
+
     <fragment
         android:id="@+id/place_autocomplete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-        android:layout_weight = "1"
         />
+
+
+
 
 </RelativeLayout>
